@@ -20,6 +20,7 @@ Version 1.4.4 - CVS
     insecure file inclusions. [CAN-2005-0075]
   - Set up language before outputing errors in auth.php and signout.php
     to make them appear in the correct language.
+  - Fix potential file inclusion issues in src/webmail.php [CAN-2005-0075].
 
 Version 1.4.4 RC1 - 31 December 2004
 ------------------------------------
